--- a/src/Frontend/Evolutio.Web/wwwroot/index.html
+++ b/src/Frontend/Evolutio.Web/wwwroot/index.html
@@ -6,19 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evolutio.Web</title>
     <base href="/" />
-    <link rel="stylesheet" href="css/app.css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-    <link href="Evolutio.Web.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/app.css" />
 </head>
 
 <body>
     <div id="app">
-        <svg class="loading-progress">
-            <circle r="40%" cx="50%" cy="50%" />
-            <circle r="40%" cx="50%" cy="50%" />
-        </svg>
-        <div class="loading-progress-text"></div>
+        <div class="loading-screen" style="position: absolute; top: 30vh; width: 100%; text-align: center">
+            <h1>Todo app</h1>
+            <div style="display: flex; gap: 10px; justify-content: center; align-items: center">
+                <div class="spinner-border" role="status">
+                    Testando tela de loading
+                </div>
+            </div>
+        </div>
     </div>
 
     <div id="blazor-error-ui">
